@@ -12,7 +12,8 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
-- Issue #1640: Added math.isinf() and math.isnan() functions.
+- Issue #1640: Added math.isinf(x), math.isnan(x) and math.copysign(x, y)
+  functions.
 
 - Issue #1635: Platform independent creation and representation of NaN
   and INF. float("nan"), float("inf") and float("-inf") now work on every
